--- a/package.json
+++ b/package.json
@@ -5,14 +5,19 @@
   "main": "app.js",
   "scripts": {
     "start:dev": "nodemon server.js",
-    "start:prod": "NODE_ENV=production nodemon server.js"
+    "start:prod": "NODE_ENV=production nodemon server.js",
+    "debug": "ndb server.js"
   },
   "author": "Jonas Schmedtmann",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
-    "morgan": "^1.9.1"
+    "mongoose": "^5.5.2",
+    "morgan": "^1.9.1",
+    "ndm": "^3.11.3",
+    "slugify": "^1.3.4",
+    "validator": "^10.11.0"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
@@ -23,6 +28,7 @@
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
+    "ndb": "^1.1.5",
     "prettier": "^1.17.0"
   }
 }
