--- a/package.json
+++ b/package.json
@@ -11,13 +11,21 @@
   "author": "Jonas Schmedtmann",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^6.7.0",
+    "helmet": "^6.1.5",
+    "hpp": "^0.2.3",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^5.5.2",
     "morgan": "^1.9.1",
     "ndm": "^3.11.3",
+    "nodemailer": "^6.9.1",
     "slugify": "^1.3.4",
-    "validator": "^10.11.0"
+    "validator": "^10.11.0",
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
